--- a/_data/songs.yaml
+++ b/_data/songs.yaml
@@ -610,7 +610,7 @@ ros:
   description:
     # https://en.wikipedia.org/wiki/Es_ist_ein_Ros_entsprungen
     -
-       Es ist ein Ros entsprungen ("Eis que uma rosa nasceu") é uma canção de Natal e hino Mariano de origem germânica. A rosa no texto é uma referência à Virgem Maria. O hino menciona o profecias de Isaías no Antigo Testamento, que na interpretação cristã descrevem a Incarnação de Jesus e a árvore de Jessé, um símbolo tradicional da linhagem de Jesus. Por conta deste tema o hine é popular, até os dias de hoje, no Advento.
+       Es ist ein Ros entsprungen ("Eis que uma rosa nasceu") é uma canção de Natal e hino Mariano de origem germânica. A rosa no texto é uma referência à Virgem Maria. O hino menciona o profecias de Isaías no Antigo Testamento, que na interpretação cristã descrevem a Incarnação de Jesus e a árvore de Jessé, um símbolo tradicional da linhagem de Jesus. Por conta deste tema o hino é popular, até os dias de hoje, no Advento.
   record:
       autor (música): Michael Pretorius
       ano: <a href="https://www.cpdl.org/wiki/index.php/Musae_Sioniae,_sechster_Theil_(Michael_Praetorius)">1609</a>
