Suporte caso nenhuma apresentação agendada

--- a/_data/events.yaml
+++ b/_data/events.yaml
@@ -70,7 +70,7 @@
   #place:  Igreja Martin Luther
   time: "10:30"
   weekday: domingo
-  status: scheduled
+  status: past
   description:
     - Apresentação com o Coro Intercantus
   #carousel:
