--- a/_data/songs.yaml
+++ b/_data/songs.yaml
@@ -68,12 +68,12 @@ jesu-rex:
             Mane nobiscum, Domine,
             Et nos illustra lumine,
             Pulsa mentis caligine,
-            Mundum reple ducedine.
+            Mundum reple dulcedine.
           translation:
             Permaneça conosco, Senhor,
             e nos ilumine com Sua luz.
             Disperse a escuridão de nossas almas
-            preechendo o mundo com Sua douçura.
+            preenchendo o mundo com Sua doçura.
 mignonne:
   title: Mignonne, allons voir si la rose
   image: ronsard.jpg
@@ -322,7 +322,7 @@ dindirindin:
         Um belo dia acordei,
         e passei a manhã na campina;
         encontrei o rouxinol,
-        que cantava sobre os galhos, dindirindín.
+        que cantava sobre os galhos, dindirindin.
     -
       original:
         "\"Ruyseñor, le ruyseñor,
@@ -334,7 +334,7 @@ dindirindin:
         "Rouxinol, oh rouxinol,
         passe esta mensagem importante,
         e diga ao meu amigo:
-        que já estou casada, dindirindín."
+        que já estou casada, dindirindin."
 ay-triste:
   title: Ay triste que vengo
   image: juandeencina.webp
@@ -436,7 +436,7 @@ occhi:
     -
       original:
         O occhi, manza mia, cigli dorati,
-        o faccia d'una luna stralucente,
+        o faccia d'una luna stralucenti,
       translation:
         Oh, olhos de minha amada, seus cílios dourados,
         oh rosto tão luminoso quanto a Lua resplandecente,
@@ -695,7 +695,7 @@ ave-verum-byrd:
         De seu lado transpassado fluiu água e sangue
     -
       original:
-        esto nobis prægustatum
+        esto nobis praegustatum
         in mortis examine
       translation:
         Sê para nós remédio na hora tremenda da morte
